--- a/viewer/scripts/install
+++ b/viewer/scripts/install
@@ -6,8 +6,14 @@ export CURR_DIR=$(cd $(dirname "${BASH_SOURCE[0]}"); pwd)
 source "${CURR_DIR}/prepare_env"
 
 # Installs into current directory: Node.js, npm and required modules
-# If fails, try `clean` script first
 
+export NODE_VERSION=8.11.1 # Version of Node.js to install
+
+PACKAGE_NAME="node-v${NODE_VERSION}-linux-x64"
+#PACKAGE_NAME="node-v8.11.1-darwin-x64.tar.gz" # For MacOS
+
+ARCHIVE_NAME="${PACKAGE_NAME}.tar.xz"
+URL="https://nodejs.org/dist/v${NODE_VERSION}/${ARCHIVE_NAME}"
 
 printf "\nInstalling Node.js ${NODE_VERSION}\n"
 
